--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=tcp:sqlservermert.database.windows.net,1433;Initial Catalog=studentsystemdb1;Persist Security Info=False;User ID=mert;Password=M90ertS!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
