--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=tcp:sqlservermert.database.windows.net,1433;Initial Catalog=studentsystemdb2;Persist Security Info=False;User ID=mert;Password=M90ertS!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+        "DefaultConnection": "Server=LAPTOP-191OHGEN\\SQLEXPRESS;Database=TuikDb2;Trusted_Connection=True;MultipleActiveResultSets=true"
     },
   "Logging": {
     "LogLevel": {
