--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=LAPTOP-191OHGEN\\SQLEXPRESS;Database=TuikDb2;Trusted_Connection=True;MultipleActiveResultSets=true"
+        "DefaultConnection": "Server=LAPTOP-191OHGEN\\SQLEXPRESS;Database=ORNEK;Trusted_Connection=True;MultipleActiveResultSets=true"
     },
   "Logging": {
     "LogLevel": {
